# QUT-Baxter-Ribbon-Cutting

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  setup.py
config/: arm.config  arm.config~  left_poses.config  right_poses.config
scripts/: connect_game.py~  image  image~  ribbon_cut  ribbon_cut.py~  ribbon_cut~
src/ribbon_cut/: __init__.py  pick_place_new.py  pick_place_new.py~
